k8s/apps/bases/frontend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: frontend
  labels:
    istio-injection: enabled
spec: {}
status: {}
