k8s/apps/bases/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: tracker-frontend
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracker-frontend
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tracker-frontend
    spec:
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - image: northamerica-northeast1-docker.pkg.dev/track-compliance/tracker/frontend:master-26cd70b-1791553287 # {"$imagepolicy": "flux-system:frontend"}
          name: frontend
          resources:
            limits:
              cpu: 200m
              memory: 45Mi
            requests:
              cpu: 200m
              memory: 45Mi
          securityContext:
            runAsGroup: 1000
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
status: {}
