k8s/apps/bases/frontend/maintenance-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: tracker-frontend-maintenance
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracker-frontend-maintenance
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tracker-frontend-maintenance
    spec:
      containers:
        - image: gcr.io/track-compliance/frontend-maintenance:master-a1a1a1a-1691787702 # {"$imagepolicy": "flux-system:frontend-maintenance"}
          name: frontend-maintenance
          resources:
            limits:
              cpu: 200m
              memory: 45Mi
            requests:
              cpu: 200m
              memory: 45Mi
status: {}
