k8s/apps/bases/frontend/maintenance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracker-frontend-maintenance
  namespace: frontend
spec:
  ports:
  - name: http-frontend
    port: 8080
  selector:
    app: tracker-frontend-maintenance
  type: ClusterIP
status:
  loadBalancer: {}
